<package>
  <name>turtlebot_teleop_with_image</name>
  <version>1.0</version>
  <description>
  A simple viewer for ROS image topics. We can interact on the view to control the turtlebot.
  </description>
  <author></author>
  <maintainer email=""></maintainer>
  <license>BSD</license>
  <url></url>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
  
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gtk2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stereo_msgs</build_depend>

  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>gtk2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
